# Supplementaries

Acoustic_matching_titanium/: pzt_smd_Titanium_stepA.m  pzt_smd_Titanium_stepB.m
Analysis_4DSTEM_tiltseries/: Arina_trackbeam.m  Arinatomo_rings_v9.m  PSF4deconvolution.m  README.txt  batch.m  batch_rec_example2.m  ch_align.m  ch_iDPC.m  ch_reorder.m  clusteralign_astra_reconstruct.m  clusteralign_astra_reconstruct_BP.m  deshift.m  hdf5_parallax_example.ipynb  intgrad2.m  piDPC.m  rings_align.m  rings_clusteralign_translate.m  rings_copyalign.m  rings_prealign.m  rings_reorder.m  sect_angle2.m  sect_iDPC.m  tomos_pca.m
Performance_of_Tilt_Increment_Schemes/: balance_pic.m  reconst_direct_algebraic.m  reconst_slab_crystal.m
SMD_matching/: XRD_report_kindly_provided_by_Nina_Perkas.docx  pzt_smd_Titanium.m
Shadow_Montage/: Backproject_align3d_afterAretomo.m  ForAreTomo.m  README.txt  ShadowMontage_ELA4.m  ShadowMontage_ELA4_imageCTF.m  ShadowMontage_Parallel_Sync.m  ShadowMontage_Parallel_Sync_imageCTF.m  ShadowMontage_checkDirections.m  ShadowMontage_tiltseries_imageCTF.m  ShadowMontage_tiltseries_ver2.m  balanced_imshow.m  cone_rec3d.m  deshift.m  fftInterpolate.m  instruction.docx
deshifted_iCOM/: iCOM1_ex5.ipynb
dif_cross_section/: Arina_trackbeam.m  Arinatomo_rings.m  ELA_scat.m  PRZ-FitNBED-4D-Shift-Export-to-Raw-v4.ipynb  feature_average.m
eer2mrc/: CMakeLists.txt  EERReaderLib.lib  ElectronCountedFramesDecompressor.cpp  ElectronCountedFramesDecompressor.h  Readme.txt  eer2mrc.cpp  eer2mrc.sln  eer2mrc.vcxproj  eer2mrc.vcxproj.filters  how_to_cmake.txt
(+15 files in other folders)
